// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button it renders default button 1`] = `
<button
  className="root-0-2-1 primaryButtonStyle-0-2-2"
  onClick={[MockFunction]}
>
  default
</button>
`;

exports[`button it renders primary button 1`] = `
<button
  className="root-0-2-1 primaryButtonStyle-0-2-2"
  onClick={[MockFunction]}
>
  primary
</button>
`;

exports[`button it renders secondary button 1`] = `
<button
  className="root-0-2-1 secondaryButtonStyle-0-2-3"
  onClick={[MockFunction]}
>
  secondary
</button>
`;
